# simple_llama_client

./: Cargo.toml  LICENSE  README.md
src/: main.rs
