[package]
name = "my_llama_client"
version = "0.1.88"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
encoding_rs = "0.8.35"
hf-hub = "0.4.1"
llama-cpp-2 = { version = "0.1.89", features = [] }
rustyline = "15.0.0"

[features]
cuda = ["llama-cpp-2/cuda"]
metal =  ["llama-cpp-2/metal"]
native = ["llama-cpp-2/native"]
vulkan = ["llama-cpp-2/vulkan"]

[lints]
#workspace = true
